fixed some more spacing issues

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,9 @@
 @import "./base.css";
 
+#app {
+  margin: 20px 0;
+}
+
 main {
   display: flex;
   flex-direction: column;
